fix: user id for gpt methods and support for multiple users

--- a/config_template.json
+++ b/config_template.json
@@ -1,5 +1,8 @@
 {
     "TELEGRAM_KEY": "",
-    "TELEGRAM_ID": 1234,
+    "TELEGRAM_ID": [
+        1234,
+        5678
+    ],
     "OPENAI_KEY": ""
 }
